<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_logo"
        android:theme="@style/SplashTheme"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="40dp" />

    <!-- App Name -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- App Subtitle / Tagline -->
    <TextView
        android:id="@+id/app_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:textStyle="italic" />

    <!-- Progress Bar (Loading Spinner) -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_tagline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:indeterminate="true"
        android:visibility="visible"/>


</RelativeLayout>
